Added future imports

--- a/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
+++ b/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
@@ -75,6 +75,7 @@
         "outputId": "da44a037-c8f8-428b-ce3b-2e0853fa8d8e"
       },
       "source": [
+        "from __future__ import print_function\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "from scipy import misc\n",
@@ -82,7 +83,7 @@
         "import tensorflow as tf\n",
         "print(tf.__version__)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -151,7 +152,7 @@
         "training_images = training_images.reshape(60000, 28, 28, 1) # Training images\n",
         "test_images = test_images.reshape(10000, 28, 28, 1) # Testing images"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -177,7 +178,7 @@
         "training_images = training_images / 255.0\n",
         "test_images = test_images / 255.0"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -250,7 +251,7 @@
         "plt.imshow(i)\n",
         "plt.show()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -289,7 +290,7 @@
         "size_x = i_transformed.shape[0]\n",
         "size_y = i_transformed.shape[1]"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -324,7 +325,7 @@
         "  #plt.axis('off')\n",
         "  plt.show()   "
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -351,7 +352,7 @@
       "source": [
         "transform_and_display([ [-1, -2, -1], [0, 0, 0], [1, 2, 1]], i_transformed)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -463,7 +464,7 @@
         "  tf.keras.layers.Dense(10, activation='softmax')\n",
         "])"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -496,7 +497,7 @@
         "\n",
         "history = model.fit(training_images, training_labels, epochs=10)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -559,7 +560,7 @@
         "plt.legend(['train', 'val'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -597,7 +598,7 @@
         "plt.legend(['train', 'val'], loc='upper left')\n",
         "plt.show()"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -641,7 +642,7 @@
         "test_loss, test_acc = model.evaluate(test_images, test_labels)\n",
         "print(test_acc)"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -690,7 +691,7 @@
       "source": [
         "print(test_labels[:100])"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -734,7 +735,7 @@
         "  axarr[2,x].imshow(f3[0, : , :, CONVOLUTION_NUMBER], cmap='inferno')\n",
         "  axarr[2,x].grid(False)"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -777,7 +778,7 @@
       "source": [
         "model.save('fashion_mnist_model')"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
