--- a/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
+++ b/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
@@ -36,7 +36,7 @@
         "# Get started with CNNs\n",
         "(Author: [Rishit Dagli](https://www.rishit.tech))\n",
         "\n",
-        "In this tutorial you will se how you can create a simple CNN to create an image cllassification algorithm with the [Fashion MNIST](https://www.tensorflow.org/datasets/catalog/fashion_mnist) Dataset. We will be using Keras, a high level abstraction so you can very easily get started on making your first CNN.\n"
+        "In this tutorial you will see how you can create a simple [CNN](https://en.wikipedia.org/wiki/Convolutional_neural_network) to create an image classification algorithm with the [Fashion MNIST](https://www.tensorflow.org/datasets/catalog/fashion_mnist) Dataset. We will be using Keras, a high level abstraction so you can very easily get started on making your first CNN.\n"
       ]
     },
     {
