Added TensorFlow Datasets in Rederences

--- a/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
+++ b/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
@@ -803,6 +803,7 @@
         "\n",
         "*   [Conv2D Documentation](https://www.tensorflow.org/api_docs/python/tf/keras/layers/Conv2D)\n",
         "*   [MaxPool2D Documentation](https://www.tensorflow.org/api_docs/python/tf/keras/layers/MaxPool2D)\n",
+        "*   [TensorFlow Datasets, Fashion MNIST](https://www.tensorflow.org/api_docs/python/tf/keras/datasets/fashion_mnist)\n",
         "*   [Using Convolutional Neural Networks with TensorFlow by Rishit Dagli](https://medium.com/@rishit.dagli/using-convolutional-neural-networks-with-tensorflow-part-3-35de28a5621)\n",
         "*   [Extending what Convolutional nets can do by Rishit Dagli](https://medium.com/@rishit.dagli/extending-what-convolutional-nets-can-do-251f3021529c)\n",
         "*   [Visulaizing Convolutions by Laurence Moroney](https://github.com/lmoroney/dlaicourse/blob/842e3b1099082dc8631301c26afb6ec71f158eee/Horse_or_Human_NoValidation.ipynb)"
