Added Matplotlib URL

--- a/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
+++ b/tensorflow/examples/get_started/get-started-with-cnn/cnn_with_fashion_mnist.ipynb
@@ -555,7 +555,7 @@
       "source": [
         "### Accuracy and loss curves\n",
         "\n",
-        "Let's build an accuracy and loss curve to see how well the model performs. We will use `matplotlib` to do so."
+        "Let's build an accuracy and loss curve to see how well the model performs. We will use [`matplotlib`](https://matplotlib.org/) to do so."
       ]
     },
     {
